--- a/css/style.css
+++ b/css/style.css
@@ -1629,6 +1629,10 @@ footer .footer-content .btnBottomGroup .clause-links .drop .droplist{
     border: 1px solid #ddd;
     /* padding: 24px 0; */
     text-align: left;
+    display:none;
+}
+footer .footer-content .btnBottomGroup .clause-links .drop .droplist.active{
+    display: block;
 }
 footer .footer-content .btnBottomGroup .clause-links .drop .droplist li {
     padding: 16px;
