--- a/css/pretendard.css
+++ b/css/pretendard.css
@@ -69,7 +69,7 @@ http://scripts.sil.org/OFL
 	font-display: swap;
 	src: local('Pretendard Thin'), url(../fonts/Pretendard-1.3.9/woff2/Pretendard-Thin.woff2) format('woff2'), url(../fonts/Pretendard-1.3.9/woff/Pretendard-Thin.woff) format('woff');
 }
-html {
+/* html {
 	font-family: 'Pretendard';
 	font-weight: 400;
-}
+} */
