--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ section {
     top:0%;
     left: 10%; */
     /* transform: translate(-50%,-50%); */
-    color: #ffffff33;
+    color: #ffffff44;
     /* text-align: center; */
     font-weight: 900;
     /* position: relative; */
@@ -603,6 +603,7 @@ section .title .down .bold {
 }
 .section1 .row1 .contain .sec1 a img {
     width: 100%;
+    border-radius: 0 0 16px 0;
 }
 .section1 .row1 .contain .sec2{
     width: 55%;
@@ -610,6 +611,7 @@ section .title .down .bold {
 }
 .section1 .row1 .contain .sec2 img {
     width: 100%;
+    border-radius: 0 16px 0 0;
 }
 .section1 .row1 .contain .text{
     position: absolute;
@@ -759,6 +761,7 @@ section .title .down .bold {
 }
 .section1 .row2 .contain .sec1 img {
     width: 100%;
+    border-radius: 0 0 8px 0;
 }
 .section1 .row2 .contain .sec2 {
     width: 35%;
@@ -766,6 +769,7 @@ section .title .down .bold {
 }
 .section1 .row2 .contain .sec2 img {
     width: 100%;
+    border-radius: 0 10px 0 0;
 }
 .section1 .row2 .contain .txt {
     position: absolute;
@@ -934,6 +938,7 @@ section .title .down .bold {
 .section2 .con .conLun .swiper-wrapper .swiper-slide .txt h4{
     font-size: 60px;
     margin-bottom: 12px;
+    white-space: nowrap;
 }
 .section2 .con .conLun .swiper-wrapper .swiper-slide .txt .para{
     font-size: 16px;
@@ -1474,12 +1479,11 @@ footer .footer-content .copyrightGroup .copyrightBox .copyright{
 }
 footer .footer-content .copyrightGroup .copyrightBox .mark-box{
     display: flex;
+    align-items:top;
 }
 footer .footer-content .copyrightGroup .copyrightBox .mark-box li{
-    width: 50px;
-    height: 50px;
+    height: 50px; 
     border-radius: 50%;
-    background-color: #fff;
 }
 footer .footer-content .copyrightGroup .copyrightBox .mark-box li:not(:first-child){
     margin-left: 12px;
@@ -1487,6 +1491,9 @@ footer .footer-content .copyrightGroup .copyrightBox .mark-box li:not(:first-chi
 footer .footer-content .copyrightGroup .copyrightBox .mark-box li a{
     display: block;
     width: 100%;
+    height: 100%;
+}
+footer .footer-content .copyrightGroup .copyrightBox .mark-box li img {
     height: 100%;
 }
 
