--- a/css/pretendard.css
+++ b/css/pretendard.css
@@ -6,7 +6,7 @@ This Font Software is licensed under the SIL Open Font License, Version 1.1.
 This license is copied below, and is also available with a FAQ at:
 http://scripts.sil.org/OFL
 */
-
+/* 
 @font-face {
 	font-family: 'Pretendard';
 	font-weight: 900;
@@ -68,7 +68,8 @@ http://scripts.sil.org/OFL
 	font-weight: 100;
 	font-display: swap;
 	src: local('Pretendard Thin'), url(../fonts/Pretendard-1.3.9/woff2/Pretendard-Thin.woff2) format('woff2'), url(../fonts/Pretendard-1.3.9/woff/Pretendard-Thin.woff) format('woff');
-}
+} */
+
 /* html {
 	font-family: 'Pretendard';
 	font-weight: 400;
