--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,8 @@ header .wrap .util .mypage{}
     
 }
 .banner .con div:hover a {
-    backdrop-filter: blur(6px)  brightness(0.8); ;
+    backdrop-filter: blur(6px)  brightness(0.8);
+    -webkit-backdrop-filter:blur(5px) brightness(0.8)
 }
 .banner .con div:hover:after {
    opacity: 1;
